--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <title> {% if page.title %} {{ page.title }} | {% endif %} Mikey Wills</title>
     <link rel="stylesheet" type="text/css" media="screen, projection" href="/stylesheets/screen.css" />
     <link rel="stylesheet" href="/fonts/ss-standard.css" />
+    <link rel="author" href="https://plus.google.com/111592174684877854482/posts"/>
 <!-- Typekit -->   
     <script type="text/javascript" src="http://use.typekit.com/ogx4moy.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
