--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
   <head>
     <title> {% if page.title %} {{ page.title }} | {% endif %} Mikey Wills</title>
     <link rel="stylesheet" type="text/css" media="screen, projection" href="/stylesheets/screen.css" />
-    <link rel="stylesheet" href="/fonts/ss-standard.css" />
     <link href="/fonts/ss-social.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/fonts/ss-standard.css" />
     <link rel="author" href="https://plus.google.com/111592174684877854482/posts"/>
 <!-- Typekit -->   
     <script type="text/javascript" src="http://use.typekit.com/ogx4moy.js"></script>
@@ -50,9 +50,9 @@
         </div>
         <div>
           <ul>
-            <li class="ss-twitter right"><a href="https://twitter.com/mukealicious">Twitter</a></li>
-            <li class="ss-mail right"><a href="mailto:mikey@muke.me?subject=Yo Mukey!">Contact</a></li>
-            <li class="ss-rss right"><a href="http://feeds.feedburner.com/MikeyWills">RSS Feed</a></li>
+            <li><a href="https://twitter.com/mukealicious" class="ss-twitter right">Twitter</a></li>
+            <li><a href="mailto:mikey@muke.me?subject=Yo Mukey!" class="ss-mail right">Contact</a></li>
+            <li><a href="http://feeds.feedburner.com/MikeyWills" class="ss-rss right">RSS Feed</a></li>
           </ul>
         </div>
       </footer>
