Add musing link to nav. Remove resources. Make lists smaller font size in blog posts.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
     <link href="/fonts/ss-social.css" rel="stylesheet" />
     <link rel="stylesheet" href="/fonts/ss-standard.css" />
     <link rel="author" href="https://plus.google.com/111592174684877854482/posts"/>
-<!-- Typekit -->   
+<!-- Typekit -->
     <script type="text/javascript" src="http://use.typekit.com/ogx4moy.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-<!-- Analytics -->       
+<!-- Analytics -->
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -27,20 +27,20 @@
   </head>
   <body>
     <div class="container">
-<!-- Header -->   
+<!-- Header -->
       <header>
         <a href="/" title="Home"><img src="/images/mukelogo.png" alt="Mikey Wills Logo" id="logo"></a>
-<!-- Nav -->   
+<!-- Nav -->
         <nav>
           <ul>
             <li><a href="/writing.html" title="Writing">Writing</a></li>
             <li><a href="/reading.html" title="Reading">Reading</a></li>
-            <li><a href="/resources.html" title="Resources">Resources</a></li>
+            <li><a href="http://muse.muke.me" title="Musing">Musing</a></li>
             <li><a href="/info.html" title="Info">Info</a></li>
           </ul>
         </nav>
       </header>
-<!-- Content -->   
+<!-- Content -->
       {{ content }}
 <!-- Footer -->
       <footer>
