--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           <ul>
             <li><a href="/writing.html" title="Writing">Writing</a></li>
             <li><a href="/reading.html" title="Reading">Reading</a></li>
-            <li><a href="http://muse.muke.me" title="Musing">Musing</a></li>
+<!--             <li><a href="http://muse.muke.me" title="Musing">Musing</a></li> -->
             <li><a href="/info.html" title="Info">Info</a></li>
           </ul>
         </nav>
