Add tumblr to nav and remove reading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,7 @@
         <nav>
           <ul>
             <li><a href="/writing.html" title="Writing">Writing</a></li>
-            <li><a href="/reading.html" title="Reading">Reading</a></li>
-<!--             <li><a href="http://muse.muke.me" title="Musing">Musing</a></li> -->
+            <li><a href="http://muse.muke.me" title="Musing">Musing</a></li>
             <li><a href="/info.html" title="Info">Info</a></li>
           </ul>
         </nav>
